# onedb

./: pyproject.toml  setup.py
unifydb/: exceptions.py
unifydb/adapters/: __init__.py  cassandra_db.py  db2.py  dynamodb.py  elasticsearch_db.py  oracle.py  postgresql.py
unifydb/core/: base.py  manager.py
unifydb/web/: __init__.py  api.py  routes.py
