[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unifydb"
version = "1.0.0"
description = "One library to rule them all databases. Unified interface for 15+ database systems."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = [
    "database", "sql", "nosql", "orm", "postgresql", "mysql", 
    "mongodb", "redis", "oracle", "sqlite", "elasticsearch",
    "cassandra", "dynamodb", "snowflake", "bigquery", "neo4j"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
# Individual database drivers
oracle = ["cx_Oracle>=8.0.0", "oracledb>=1.0.0"]
mysql = ["mysql-connector-python>=8.0.0", "PyMySQL>=1.0.0"]
mssql = ["pyodbc>=4.0.0", "pymssql>=2.2.0"]
postgresql = ["psycopg2-binary>=2.9.0", "asyncpg>=0.27.0"]
mongodb = ["pymongo>=4.0.0", "motor>=3.0.0"]
sqlite = []  # Built-in
redis = ["redis>=4.0.0", "aioredis>=2.0.0"]
db2 = ["ibm_db>=3.0.0"]
elasticsearch = ["elasticsearch>=8.0.0"]
cassandra = ["cassandra-driver>=3.25.0"]
mariadb = ["mariadb>=1.1.0"]
dynamodb = ["boto3>=1.26.0"]
snowflake = ["snowflake-connector-python>=3.0.0"]
bigquery = ["google-cloud-bigquery>=3.0.0"]
neo4j = ["neo4j>=5.0.0"]

# Web panel - SEPARATE from all!
web = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "Jinja2>=3.1.0",
]

# All databases (without web)
all = [
    "unifydb[oracle]",
    "unifydb[mysql]",
    "unifydb[mssql]",
    "unifydb[postgresql]",
    "unifydb[mongodb]",
    "unifydb[redis]",
    "unifydb[db2]",
    "unifydb[elasticsearch]",
    "unifydb[cassandra]",
    "unifydb[mariadb]",
    "unifydb[dynamodb]",
    "unifydb[snowflake]",
    "unifydb[bigquery]",
    "unifydb[neo4j]",
]

# Full installation
full = [
    "unifydb[all]",
    "unifydb[web]",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/EndermanHack19/unifydb"
Documentation = "https://unifydb.readthedocs.io"
Repository = "https://github.com/EndermanHack19/unifydb"
Issues = "https://github.com/yourusername/unifydb/issues"

[project.scripts]
unifydb = "unifydb.cli:main"
unifydb-web = "unifydb.web:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["unifydb*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
